--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -22,7 +22,7 @@
 #translate-btn{
     background: none;
     width: 75px;
-    height: 55px;
+    height: 75px;
     border-radius: 10px;
     border: none;
     color: $white;
@@ -31,6 +31,12 @@
     background-position:center;
     appearance: none;
     cursor: pointer;
+    display: flex;
+   flex-direction: row-reverse;
+   align-items: flex-end;
+   text-align: center;
+   font-family: $roboto;
+
     @media #{$xs, $sm, $md}{
         display: none;
     }
@@ -41,6 +47,7 @@
         background-color: #78628f;
         padding: 0;
         font-family: $roboto;
+        
     }
 
 }
