--- a/public/scss/_skils.scss
+++ b/public/scss/_skils.scss
@@ -32,10 +32,17 @@
             }
         }
     }
+    &__ability-title{
+        text-align: center;
+        font-size: 30px;
+        color: #fff;
+        margin-bottom: 50px;
+    }
     &__ability-box{
         display: flex;
         justify-content: center;
         flex-direction: column;
+        align-items: center;
     }
     &__img-ability{
         max-width: 200px;
