--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7826,7 +7826,13 @@ body {
   font-family: "Roboto", sans-serif;
   background: #fff;
   color: #000;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0; }
+
+@media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px) {
+  .row {
+    --bs-gutter-x: 0; } }
 
 a {
   color: #cda45e;
@@ -8457,7 +8463,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 .introduction__area {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;
-  border: 6px solid #b93c51;
+  border: 3px solid #b93c51;
   margin: 1px;
   padding-bottom: 50px; }
 
@@ -8518,20 +8524,32 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;
   padding-top: 30px;
   padding-bottom: 150px;
-  border: 6px solid #b93c51;
+  border: 3px solid #b93c51;
   margin: 1px; }
   .skills__title {
     text-align: center;
     font-size: 45px;
     color: #fff; }
+    @media (max-width: 575px) {
+      .skills__title {
+        font-size: 40px; } }
   .skills__subtitle {
     text-align: center;
     font-size: 20px;
     color: #fff; }
+    @media (max-width: 575px) {
+      .skills__subtitle {
+        font-size: 15px;
+        text-align: start; } }
   .skills__btn-box {
     display: flex;
     flex-direction: column;
-    align-items: center; }
+    align-items: center;
+    border-right: 1px solid #fff; }
+    @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 768px) and (max-width: 991px) {
+      .skills__btn-box {
+        border: none;
+        margin-bottom: 30px; } }
     .skills__btn-box button {
       background: none;
       width: 120px;
@@ -8539,25 +8557,70 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
       margin-bottom: 20px;
       color: #fff;
       font-size: 16px;
-      text-align: center; }
+      text-align: center;
+      font-weight: 700;
+      text-transform: uppercase;
+      transition: 0.6s linear; }
+      .skills__btn-box button:hover {
+        color: #ff4646; }
       .skills__btn-box button .actived {
         border-bottom: 1px solid #b93c51; }
-  .skills__ability-title {
-    text-align: center;
-    font-size: 30px;
-    color: #fff;
-    margin-bottom: 50px; }
+  @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 768px) and (max-width: 991px) {
+    .skills .mobile-border {
+      border-bottom: 1px solid #fff;
+      margin-bottom: 60px; } }
   .skills__ability-box {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center; }
+    @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 768px) and (max-width: 991px) {
+      .skills__ability-box {
+        flex-direction: column-reverse;
+        margin-bottom: 20px; } }
+  .skills__progressbar-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center; }
+    .skills__progressbar-wrapper .circle-progress-box {
+      width: 100px;
+      height: 100px; }
+      @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 768px) and (max-width: 991px) {
+        .skills__progressbar-wrapper .circle-progress-box {
+          margin-bottom: 30px; } }
+    .skills__progressbar-wrapper .CircularProgressbar .CircularProgressbar-path {
+      stroke: #b93c51;
+      animation: animation-progress-circle 4.5s linear; }
+  .skills__performance-title {
+    color: #c27e17;
+    font-weight: 600; }
   .skills__img-ability {
-    max-width: 200px; }
+    max-width: 200px;
+    animation: img-ability-animation 2s  ease-in infinite alternate; }
   .skills__text-ability {
     font-size: 15px;
     color: #fff;
     text-align: center;
-    margin-top: 20px; }
+    margin-top: 20px;
+    text-transform: uppercase;
+    border-bottom: 1px solid #b93c51; }
+    @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 768px) and (max-width: 991px) {
+      .skills__text-ability {
+        margin-bottom: 30px; } }
+
+@keyframes animation-progress-circle {
+  0% {
+    stroke-dasharray: 53.079633px 157.07963267948966px; }
+  50% {
+    stroke-dasharray: 90.079633px 157.07963267948966px; }
+  100% {
+    stroke-dasharray: 157.07963267948966px 157.07963267948966px; } }
+
+@keyframes img-ability-animation {
+  0% {
+    transform: translateY(-15px); }
+  100% {
+    transform: translateY(0px); } }
 
 /*# sourceMappingURL=style.css.map */
