--- a/public/scss/_general.scss
+++ b/public/scss/_general.scss
@@ -17,6 +17,14 @@ body {
   background: #fff;
   color: #000;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+.row{
+  @media #{$xs, $sm} {
+    --bs-gutter-x: 0;
+  }
+    
 }
 
 a {
