--- a/public/scss/_skils.scss
+++ b/public/scss/_skils.scss
@@ -2,22 +2,34 @@
      background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;;
      padding-top: 30px;
      padding-bottom: 150px;
-     border: 6px solid rgb(185, 60, 81);
+     border: 3px solid rgb(185, 60, 81);
      margin: 1px;
     &__title{
         text-align: center;
         font-size: 45px;
         color: #fff;
+        @media #{$xs}{
+            font-size: 40px;
+         }
     }
     &__subtitle{
         text-align: center;
         font-size: 20px;
         color: #fff;
+        @media #{$xs}{
+            font-size: 15px;
+            text-align: start;
+         }
     }
     &__btn-box{
         display: flex;
         flex-direction: column;
         align-items: center;
+        border-right: 1px solid #fff;
+        @media #{$xs, $sm, $md}{
+            border: none;
+            margin-bottom: 30px;
+         }
 
         & button{
             background: none;
@@ -27,30 +39,96 @@
             color: #fff;
             font-size: 16px;
             text-align: center;
+            font-weight: 700;
+            text-transform: uppercase;
+            transition: 0.6s linear;
+            &:hover{
+                color: rgb(255, 70, 70);
+            }
             & .actived{
                 border-bottom: 1px solid rgb(185, 60, 81);
             }
         }
     }
-    &__ability-title{
-        text-align: center;
-        font-size: 30px;
-        color: #fff;
-        margin-bottom: 50px;
+    & .mobile-border{
+        @media #{$xs, $sm, $md}{
+            border-bottom: 1px solid #fff;
+            margin-bottom: 60px;
+         }
+
     }
     &__ability-box{
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        @media #{$xs, $sm, $md}{
+            flex-direction: column-reverse;
+            margin-bottom: 20px;
+         }
+        
+    }
+  
+    &__progressbar-wrapper{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        & .circle-progress-box{
+            width: 100px;
+            height: 100px;
+            @media #{$xs, $sm, $md}{
+                margin-bottom: 30px;
+             }
+        }
+
+        & .CircularProgressbar .CircularProgressbar-path{
+            stroke: rgb(185, 60, 81);
+            animation: animation-progress-circle 4.5s linear ;
+            
+        }
+    }
+
+
+    &__performance-title{
+        color: rgb(194, 126, 23);
+        font-weight: 600;
+        
     }
     &__img-ability{
         max-width: 200px;
+        animation: img-ability-animation 2s  ease-in infinite alternate;
     }
     &__text-ability{
         font-size: 15px;
         color: #fff;
         text-align: center;
         margin-top: 20px;
+        text-transform: uppercase;
+        border-bottom: 1px solid rgb(185, 60, 81);
+        @media #{$xs, $sm, $md}{
+            margin-bottom: 30px;
+         }
+    }
+}
+
+@keyframes animation-progress-circle{
+    0%{
+        stroke-dasharray: 53.079633px 157.07963267948966px;
+      }
+     50%{
+        stroke-dasharray: 90.079633px 157.07963267948966px;
+     } 
+      100%{
+        stroke-dasharray: 157.07963267948966px 157.07963267948966px;
+      }
+}
+
+@keyframes img-ability-animation{
+    0%{
+      transform: translateY(-15px);
+    }
+    100%{
+      transform: translateY(0px);
     }
 }
