--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8608,6 +8608,61 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px), only screen and (min-width: 768px) and (max-width: 991px) {
       .skills__text-ability {
         margin-bottom: 30px; } }
+  .skills__technologies-box {
+    background: black;
+    background: linear-gradient(225deg, black -15%, #862525 22%, #ff4646 79%);
+    width: 100%;
+    height: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: inset -10px -10px 80px 1px rgba(0, 0, 0, 0.3), 10px 20px 50px 10px rgba(0, 0, 0, 0.5);
+    border: double 5px transparent;
+    border-radius: 25px; }
+    @media (max-width: 575px) {
+      .skills__technologies-box {
+        display: flex;
+        flex-direction: row;
+        padding: 0; } }
+    .skills__technologies-box .card-tech {
+      color: #555;
+      height: 90px;
+      float: left;
+      padding: 20px;
+      margin: 15px;
+      background: white;
+      background-image: linear-gradient(110deg, white, #b9b9b9);
+      opacity: 0.9;
+      backdrop-filter: blur(1px);
+      border-radius: 25px;
+      border: double 5px transparent;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      animation-name: cards-animation;
+      animation-duration: 6000ms;
+      animation-iteration-count: infinite;
+      transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1); }
+      @media (max-width: 575px) {
+        .skills__technologies-box .card-tech {
+          width: 75px;
+          border-radius: 14px;
+          margin: 5px; } }
+      .skills__technologies-box .card-tech:hover {
+        opacity: 0.7;
+        background-image: linear-gradient(-70deg, #d85858, #9a9);
+        color: #223; }
+      .skills__technologies-box .card-tech img {
+        width: 30px; }
+      .skills__technologies-box .card-tech h6, .skills__technologies-box .card-tech .h6 {
+        text-align: center;
+        color: #000;
+        font-size: 12px;
+        margin-top: 10px;
+        font-weight: 600; }
+        @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px) {
+          .skills__technologies-box .card-tech h6, .skills__technologies-box .card-tech .h6 {
+            font-size: 10px; } }
 
 @keyframes animation-progress-circle {
   0% {
@@ -8622,5 +8677,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     transform: translateY(-15px); }
   100% {
     transform: translateY(0px); } }
+
+@keyframes cards-animation {
+  0%,
+  100% {
+    transform: rotate3d(0, 1, 0, 10deg); }
+  50% {
+    transform: rotate3d(0, 1, -0.2, 45deg); } }
 
 /*# sourceMappingURL=style.css.map */
