--- a/public/scss/_skils.scss
+++ b/public/scss/_skils.scss
@@ -110,6 +110,73 @@
             margin-bottom: 30px;
          }
     }
+
+    &__technologies-box{
+        background: rgb(0,0,0);
+        background: linear-gradient(225deg, rgba(0,0,0,1) -15%, rgba(134,37,37,1) 22%, rgba(255,70,70,1) 79%);
+        width: 100%;
+        height: auto;
+        padding-left: 20px;
+        padding-right: 20px;
+        box-shadow: inset -10px -10px 80px 1px rgba(0, 0, 0, 0.3),
+        10px 20px 50px 10px rgba(0, 0, 0, 0.5);
+        border: double 5px transparent;
+        border-radius: 25px;
+        @media #{$xs}{
+            display: flex;
+            flex-direction: row;
+            padding: 0;
+         }
+    
+
+        & .card-tech{
+            color: #555;
+            height: 90px;
+            float: left;
+            padding: 20px;
+            margin: 15px;
+            background: rgb(255, 255, 255);
+            background-image: linear-gradient(110deg, rgb(255, 255, 255), rgb(185, 185, 185));
+            opacity: 0.9;
+            backdrop-filter: blur(1px);
+            border-radius: 25px;
+            border: double 5px transparent;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            animation-name: cards-animation; 
+            animation-duration: 6000ms;
+            animation-iteration-count: infinite; 
+            transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1); 
+            @media #{$xs}{
+                width: 75px;
+                border-radius: 14px;
+                margin: 5px;
+             }
+
+            &:hover {
+            opacity: 0.7;
+            background-image: linear-gradient(-70deg, rgb(216, 88, 88), #9a9);
+            color: #223;
+            }
+
+            & img{
+                width: 30px;
+            }
+            & h6{
+                text-align: center;
+                color: #000;
+                font-size: 12px;
+                margin-top: 10px;
+                font-weight: 600;
+                @media #{$xs, $sm}{
+                    font-size: 10px;
+                 }
+            }
+
+        }
+    }
 }
 
 @keyframes animation-progress-circle{
@@ -131,4 +198,16 @@
     100%{
       transform: translateY(0px);
     }
+}
+
+
+
+@keyframes cards-animation {
+  0%,
+  100% {
+    transform: rotate3d(0, 1, 0, 10deg);
+  }
+  50% {
+    transform: rotate3d(0, 1, -0.2, 45deg);
+  }
 }
