--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8685,4 +8685,49 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   50% {
     transform: rotate3d(0, 1, -0.2, 45deg); } }
 
+.cases {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;
+  padding-top: 30px;
+  padding-bottom: 150px;
+  border: 3px solid #b93c51;
+  margin: 1px; }
+  .cases__title {
+    text-align: center;
+    font-size: 45px;
+    color: #fff; }
+    @media (max-width: 575px) {
+      .cases__title {
+        font-size: 40px; } }
+  .cases__subtitle {
+    text-align: center;
+    font-size: 20px;
+    color: #fff; }
+    @media (max-width: 575px) {
+      .cases__subtitle {
+        font-size: 15px;
+        text-align: start; } }
+  @media (max-width: 575px) {
+    .cases .carousel-cases .slick-prev::before, .cases .carousel-cases .slick-next::before {
+      display: none; } }
+  .cases .carousel-cases .slick-dots button::before {
+    color: #fff; }
+  .cases .carousel-cases .case {
+    position: relative; }
+    .cases .carousel-cases .case img {
+      width: 100%;
+      position: relative;
+      border-radius: 20px; }
+      .cases .carousel-cases .case img:hover {
+        width: 103%;
+        z-index: 2; }
+  .cases__full-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    top: 0;
+    left: 0;
+    right: 0;
+    border-radius: 20px; }
+
 /*# sourceMappingURL=style.css.map */
