--- a/public/scss/_cases.scss
+++ b/public/scss/_cases.scss
@@ -36,17 +36,44 @@
                 }
             }
         }
+
+
+        & .case-mobile-1{
+            @media #{$xs}{
+                background-image: url(../img/cases/fluabit-site-mobile.png);
+            }
+        }
+        & .case-mobile-2{
+            @media #{$xs}{
+                background-image: url(../img/cases/buffet-lavida-mobile.png);
+            }
+            
+        }
+        & .case-mobile-3{
+            @media #{$xs}{
+                background-image: url(../img/cases/alurakut-mobile.png);
+            }
+
+        }
+        & .case-mobile-1, .case-mobile-2, .case-mobile-3{
+            @media #{$xs}{
+                height: 550px;
+                background-size: cover;
+                background-repeat: no-repeat;
+                position: relative;
+                border-radius: 20px;
+
+             }
+        }
         & .case{
             position: relative;
             & img {
                 width: 100%;
                 position: relative;
                 border-radius: 20px;
-                &:hover{
-                    width: 103%;
-                    z-index: 2;
-                }
-              
+                @media #{$xs}{
+                    display: none;
+                 }
             }
         }
     }
@@ -59,6 +86,96 @@
         left: 0;
         right: 0;
         border-radius: 20px;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    &__content-box-cases{
+        background-color: rgba(0, 0, 0, 0.5);
+        height: 70px;
+        border-radius:0px 0 20px 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        transition: 0.5s linear;
+        @media #{$xs}{
+            height: 90px;
+         }
+         @media #{$sm}{
+            height: 60px;
+         }
+        
+        &:hover{
+            height: 80px;
+            @media #{$xs}{
+                height: 100px;
+             }
+        }
+
+        & h3{
+            font-size: 18px ;
+            text-align: center;
+            color: #fff;
+            font-weight: 700;
+            border-bottom: 1px solid rgb(185, 60, 81);
+            @media #{$sm}{
+                font-size: 15px;
+             }
+        }
+
+        & button{
+            background-image:  linear-gradient(to right, #6441A5 0%, #2a0845  51%, #6441A5  100%);
+            color: #fff;
+            font-weight: 700;
+            border: none;
+            border-radius: 20px;
+            padding:  1px 20px;
+            text-align: center;
+            font-size: 13px;
+            background-size: 200% auto;
+            box-shadow: 0 0 5px #eee;
+            transition: 0.5s linear;
+            display: block;
+            @media #{$xs}{
+                padding: 6px 35px;
+                font-size: 15px;
+             }
+             @media #{$sm}{
+                font-size: 11px;
+             }
+            &:hover{
+                background-position: right center; /* change the direction of the change here */
+                color: #fff;
+                text-decoration: none;
+            }
+            
+        }
     }
     
 }
+
+
+
+
+
+
+
+.btn-grad {background-image: linear-gradient(to right, #6441A5 0%, #2a0845  51%, #6441A5  100%)}
+.btn-grad {
+   margin: 10px;
+   padding: 15px 45px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   color: white;            
+   box-shadow: 0 0 20px #eee;
+   border-radius: 10px;
+   display: block;
+ }
+
+ .btn-grad:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #fff;
+   text-decoration: none;
+ }
