--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -61,7 +61,7 @@
 .actived-mobile{
     border-bottom: 3px solid #9b1c0b;
     padding: 3px 5px;
-    width: 150px;
+    width: 60px;
     transition: ease-in 0.5s;
 }
 
@@ -70,9 +70,11 @@
 @keyframes actived-animation{
     0%{
         border-bottom: 3px solid #9b1c0b;
+        color: #b82a17;
     }
     100%{
-        border-bottom: 3px solid #db6262;
+        border-bottom: 3px solid #c2b7b7;
+        color: #b82a17;
     }
 }
 
@@ -168,6 +170,11 @@
             display: inline-block;
             position: relative;
             margin-top: 10px;
+            color: #fff;
+            transition: linear 0.5s;
+            &:hover{
+                color: #b82a17;
+            }
             &:not(:last-child) {
                 margin-right: 25px;
                 @media #{$lg} {
@@ -198,16 +205,17 @@
                 border-radius: 7px;
                 text-transform: uppercase;
                 margin-bottom: 0;
+                cursor: pointer;
 
                 &:hover{
-                    color: #C4B57E;
+                    color: #b82a17;
                 }
             }
             &:hover {
                 & > a {
-                    color: #C4B57E;
+                    color: #b82a17;
                     &::after {
-                        color: #C4B57E;
+                        color: #b82a17;
                     }
                 }
              
@@ -419,6 +427,10 @@
     min-height: auto;
     background: none;
 }
+.mean-container .mean-nav li{
+    display: flex;
+    justify-content: center;
+}
 .mean-container .mean-nav > ul {
     padding: 0;
     margin: 0;
@@ -430,16 +442,18 @@
     display: none !important;
 }
 .mean-container .mean-nav ul li a {
-    width: 100%;
-    padding: 10px 0;
+    width: 50%;
+    padding: 15px 0;
+    border-radius: 20%;
+    text-align: center;
     color: $black;
-    border-top: 1px solid #dedee3;
     font-size: 13px;
     font-weight: 600;
     display: block;
+    text-transform: uppercase;
 }
 .mean-container .mean-nav ul li a:hover {
-    color: #C4B57E;
+    color: #b82a17;
     letter-spacing: 2px;
 }
 
