--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* colors home 1*/
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
@@ -8835,5 +8836,92 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   /* change the direction of the change here */
   color: #fff;
   text-decoration: none; }
+
+.contact {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9;
+  padding-top: 30px;
+  padding-bottom: 150px;
+  border: 3px solid #b93c51;
+  margin: 1px; }
+  .contact__form-area {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .contact__form-area form {
+      background-image: linear-gradient(to right, #000000 20%, #434343 45%, #000000 100%);
+      background-size: 200% auto;
+      padding: 50px;
+      max-width: 380px;
+      border-radius: 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      transition: 2.5s;
+      box-shadow: 0 0 10px #fff;
+      animation: form-animation 2.5s infinite alternate linear; }
+      .contact__form-area form label {
+        color: #fff;
+        margin-bottom: 5px;
+        font-weight: 600; }
+      .contact__form-area form input {
+        background: none;
+        border: none;
+        border-bottom: 2px solid #5c1dc9;
+        margin-bottom: 30px;
+        color: #fff;
+        font-size: 14px;
+        padding: 0px 0px 0px 0px;
+        transition: 0.5s linear;
+        padding-left: 10px; }
+        .contact__form-area form input:hover {
+          border-bottom: 2px solid #845ec5; }
+      .contact__form-area form textarea {
+        background: none;
+        border: 2px solid #5c1dc9;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        padding: 10px 90px 80px 10px;
+        font-size: 14px;
+        color: #fff; }
+      .contact__form-area form .errorMsg {
+        font-size: 11px;
+        color: #b93c51; }
+        .contact__form-area form .errorMsg::before {
+          content: "⚠ "; }
+      .contact__form-area form .invalid {
+        background-color: #b93c51;
+        border: none; }
+  .contact__btn-box {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-top: 40px;
+    border-left: 2px solid #fff; }
+    .contact__btn-box .btn-contact {
+      margin-left: 30px; }
+  .contact .btn-contact {
+    text-align: center;
+    color: #fff;
+    padding: 8px 75px;
+    border-radius: 25px;
+    margin-bottom: 30px;
+    display: inline-block;
+    border: none;
+    background-image: linear-gradient(to right, #6441A5 0%, #2a0845 51%, #6441A5 100%);
+    background-size: 600%;
+    box-shadow: 0 0 5px #fff;
+    transition: 0.9s; }
+    .contact .btn-contact:hover {
+      background-position: right center;
+      /* change the direction of the change here */
+      color: #fff;
+      text-decoration: none; }
+
+@keyframes form-animation {
+  0% {
+    box-shadow: 0 0 10px #fff; }
+  100% {
+    box-shadow: 0 0 10px #2a0845; } }
 
 /*# sourceMappingURL=style.css.map */
