--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8843,6 +8843,14 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   padding-bottom: 150px;
   border: 3px solid #b93c51;
   margin: 1px; }
+  .contact__title {
+    text-align: center;
+    font-size: 45px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    color: #fff;
+    margin-top: 30px;
+    margin-bottom: 60px; }
   .contact__form-area {
     display: flex;
     justify-content: center;
@@ -8900,6 +8908,10 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     border-left: 2px solid #fff; }
     .contact__btn-box .btn-contact {
       margin-left: 30px; }
+  .contact__links-btn-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; }
   .contact .btn-contact {
     text-align: center;
     color: #fff;
