--- a/public/scss/_contact.scss
+++ b/public/scss/_contact.scss
@@ -6,6 +6,16 @@
     padding-bottom: 150px;
     border: 3px solid rgb(185, 60, 81);
     margin: 1px;
+
+    &__title{
+        text-align: center;
+        font-size: 45px;
+        font-family: $roboto;
+        font-weight: 700;
+        color: #fff;
+        margin-top: 30px;
+        margin-bottom: 60px;
+    }
    
     &__form-area{
         display: flex;
@@ -80,7 +90,13 @@
             margin-left: 30px;
         }
     }
+    &__links-btn-wrapper{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
 
+
+    }
 
     & .btn-contact{
         text-align: center;
@@ -101,6 +117,9 @@
 
         }
     }
+
+
+    
    
 
 
