--- a/public/scss/_contact.scss
+++ b/public/scss/_contact.scss
@@ -6,6 +6,25 @@
     padding-bottom: 150px;
     border: 3px solid rgb(185, 60, 81);
     margin: 1px;
+    & .btn-contact{
+        text-align: center;
+        color: #fff;
+        padding: 8px 75px;
+        border-radius: 25px;
+        margin-bottom: 30px;
+        display: inline-block;
+        border: none;
+        background-image: linear-gradient(to right, #6441A5 0%, #2a0845  51%, #6441A5  100%);
+        background-size: 600%;
+        box-shadow: 0 0 5px #fff;
+        transition: 0.9s;
+        &:hover{
+            background-position: right center; /* change the direction of the change here */
+            color: #fff;
+            text-decoration: none;
+
+        }
+    }
 
     &__title{
         text-align: center;
@@ -16,11 +35,20 @@
         margin-top: 30px;
         margin-bottom: 60px;
     }
+    &__form-title{
+        color: #fff;
+        margin-bottom: 30px;
+    }
    
     &__form-area{
         display: flex;
         justify-content: center;
-        align-items: center;
+        flex-direction: column;
+        @media #{$sm, $md}{
+            align-items: center;
+        }
+
+        
         
         & form{
             background-image: linear-gradient(to right, #000000 20%, #434343  45%, #000000  100%);
@@ -86,37 +114,45 @@
         flex-direction: column;
         margin-top: 40px;
         border-left: 2px solid #fff;
+        @media #{$xs, $sm, $md}{
+            border-top: 2px solid #fff;
+            border-left: 0;
+            align-items: center;
+            padding-top: 15px;
+        }
         & .btn-contact{
             margin-left: 30px;
+
+            @media #{$xs, $sm, $md}{
+                margin-left: 0;
+                padding: 8px 100px;
+            }
+        }
+
+        &__title{
+            color: #fff;
+            margin-left: 30px;
+            font-style: italic;
+        }
+        &__subtitle{
+            font-size: 14px;
+            color: #fff;
+            margin-left: 30px;
+            margin-bottom: 30px;
         }
     }
     &__links-btn-wrapper{
         display: flex;
         justify-content: flex-start;
         align-items: center;
-
-
-    }
-
-    & .btn-contact{
-        text-align: center;
-        color: #fff;
-        padding: 8px 75px;
-        border-radius: 25px;
-        margin-bottom: 30px;
-        display: inline-block;
-        border: none;
-        background-image: linear-gradient(to right, #6441A5 0%, #2a0845  51%, #6441A5  100%);
-        background-size: 600%;
-        box-shadow: 0 0 5px #fff;
-        transition: 0.9s;
-        &:hover{
-            background-position: right center; /* change the direction of the change here */
-            color: #fff;
-            text-decoration: none;
-
+        @media #{$xs, $sm, $md}{
+            justify-content: center;
         }
+
+
     }
+
+  
 
 
     
