--- a/public/scss/_cases.scss
+++ b/public/scss/_cases.scss
@@ -18,7 +18,7 @@
         color: #fff;
         @media #{$xs}{
             font-size: 15px;
-            text-align: start;
+            text-align: center;
          }
     }
     & .carousel-cases{
