--- a/public/scss/_contact.scss
+++ b/public/scss/_contact.scss
@@ -12,12 +12,14 @@
         padding: 8px 75px;
         border-radius: 25px;
         margin-bottom: 30px;
+        font-weight: 700;
         display: inline-block;
         border: none;
         background-image: linear-gradient(to right, #6441A5 0%, #2a0845  51%, #6441A5  100%);
         background-size: 600%;
         box-shadow: 0 0 5px #fff;
         transition: 0.9s;
+        text-transform: uppercase;
         &:hover{
             background-position: right center; /* change the direction of the change here */
             color: #fff;
@@ -38,6 +40,12 @@
     &__form-title{
         color: #fff;
         margin-bottom: 30px;
+        @media #{$xs}{
+            text-align: center;
+         }
+         @media #{$xxl}{
+            padding-right: 128px;
+         }
     }
    
     &__form-area{
@@ -80,7 +88,7 @@
                 transition: 0.5s linear;
                 padding-left: 10px;
                 &:hover{
-                    border-bottom: 2px solid rgb(132, 94, 197);
+                    border-bottom: 2px solid rgb(194, 190, 201);
                 }
             }
             & textarea{
@@ -91,6 +99,11 @@
                 padding: 10px 90px 80px 10px;
                 font-size: 14px;
                 color: #fff;
+                transition: 0.5s linear;
+                &:hover{
+                    border: 2px solid #fff;
+
+                }
             }
 
             & .errorMsg{
@@ -122,6 +135,7 @@
         }
         & .btn-contact{
             margin-left: 30px;
+            font-weight: normal;
 
             @media #{$xs, $sm, $md}{
                 margin-left: 0;
