--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9014,4 +9014,34 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   100% {
     box-shadow: 0 0 10px #2a0845; } }
 
+.footer {
+  background-color: #923cb5;
+  background-image: linear-gradient(147deg, #653479 0%, #000000 74%);
+  padding-left: 150px;
+  padding-right: 150px; }
+  .footer__box-credits {
+    text-align: center;
+    margin-bottom: 20px; }
+    .footer__box-credits a {
+      color: #fff;
+      text-align: center;
+      text-decoration: none;
+      font-weight: 500;
+      border-bottom: 1px solid #b93c51;
+      font-size: 13px; }
+  .footer .box-divider {
+    border-top: 3px solid #b93c51;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .footer .box-divider p {
+      font-size: 13px;
+      font-weight: 700;
+      text-align: center;
+      color: #fff; }
+
+.credits {
+  height: 100vh;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9; }
+
 /*# sourceMappingURL=style.css.map */
