create credits area

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9042,6 +9042,44 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 
 .credits {
   height: 100vh;
+  padding-bottom: 150px;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.78), rgba(0, 0, 0, 0.78)), #AB7ED9; }
+  @media (max-width: 575px), only screen and (min-width: 576px) and (max-width: 767px) {
+    .credits {
+      height: auto; } }
+  .credits .arrow-back {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 700;
+    font-size: 30px;
+    display: flex;
+    align-items: center; }
+    .credits .arrow-back:hover {
+      color: #ff4b4b; }
+    .credits .arrow-back span {
+      margin-left: 5px;
+      font-family: "Roboto", sans-serif;
+      font-size: 20px; }
+  .credits__links {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .credits__links ul {
+      margin-top: 50px; }
+      .credits__links ul li {
+        color: #fff;
+        padding-bottom: 10px; }
+    .credits__links a {
+      color: #ff4b4b;
+      font-weight: 700; }
+      .credits__links a:hover {
+        text-decoration: underline; }
+    .credits__links h1, .credits__links .h1 {
+      font-size: 20px;
+      border-bottom: 1px solid #ff4b4b;
+      text-transform: uppercase;
+      text-align: center;
+      color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
