change color hover

--- a/public/scss/_contact.scss
+++ b/public/scss/_contact.scss
@@ -22,7 +22,7 @@
         text-transform: uppercase;
         &:hover{
             background-position: right center; /* change the direction of the change here */
-            color: #fff;
+            color: #000000;
             text-decoration: none;
 
         }
