--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -10,6 +10,7 @@
         &__box-credits{
             text-align: center;
             margin-bottom: 20px;
+            margin-top: 10px;
             & a{
                 color: #fff;
                 text-align: center;
