--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8859,7 +8859,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     .contact .btn-contact:hover {
       background-position: right center;
       /* change the direction of the change here */
-      color: #fff;
+      color: #000000;
       text-decoration: none; }
   .contact__title {
     text-align: center;
@@ -9023,7 +9023,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
       padding: 0; } }
   .footer__box-credits {
     text-align: center;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    margin-top: 10px; }
     .footer__box-credits a {
       color: #fff;
       text-align: center;
